--- a/exam1/package.json
+++ b/exam1/package.json
@@ -2,10 +2,8 @@
   "name": "exam1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "main": "input/index.js",
+  "author": "sanscreate",
+  "license": "MIT",
+  "dependencies": {}
 }
