--- a/exam2/package.json
+++ b/exam2/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next"
-  },
-  "author": "",
-  "license": "ISC",
+  "author": "sanscreate",
+  "license": "MIT",
   "dependencies": {
-    "next": "^8.0.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "express": "^4.17.1",
+    "mysql": "^2.17.1"
   }
 }
